Made some updates

--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
 <body>
 	<h1>Top Level Heading</h1>
 	This is a dummy page
+	<div class="shaded">
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, maxime.</p>
+	</div>
+
+	<div class="container">
+		Here goes the container: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni harum inventore nostrum nisi neque? Doloribus?
+		
+	</div>
 </body>
 </html>
